修正代码行信息代码